// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render the components of Calculator renders % Button component 1`] = `
<button
  label="%"
  style="width: 100px; height: 50px; padding: 5px; font-size: 24px; background-color: white; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  %
</button>
`;

exports[`Render the components of Calculator renders * Button component 1`] = `
<button
  label="*"
  style="width: 100px; height: 50px; padding: 5px; font-size: 24px; background-color: orange; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  *
</button>
`;

exports[`Render the components of Calculator renders + Button component 1`] = `
<button
  label="+"
  style="width: 100px; height: 50px; padding: 5px; font-size: 24px; background-color: orange; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  +
</button>
`;

exports[`Render the components of Calculator renders . Button component 1`] = `
<button
  label="."
  style="width: 100px; height: 50px; padding: 5px; font-size: 24px; background-color: white; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  .
</button>
`;

exports[`Render the components of Calculator renders / Button component 1`] = `
<button
  label="/"
  style="width: 100px; height: 50px; padding: 5px; font-size: 24px; background-color: orange; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  /
</button>
`;

exports[`Render the components of Calculator renders = Button component 1`] = `
<button
  label="="
  style="width: 100px; height: 50px; padding: 5px; font-size: 24px; background-color: orange; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  =
</button>
`;

exports[`Render the components of Calculator renders - Button component 1`] = `
<button
  label="-"
  style="width: 100px; height: 50px; padding: 5px; font-size: 24px; background-color: orange; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  -
</button>
`;

exports[`Render the components of Calculator renders 0 Button component 1`] = `
<button
  label="0"
  style="width: 200px; height: 50px; padding: 5px; font-size: 24px; background-color: white; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  0
</button>
`;

exports[`Render the components of Calculator renders 1 Button component 1`] = `
<button
  label="1"
  style="width: 100px; height: 50px; padding: 5px; font-size: 24px; background-color: white; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  1
</button>
`;

exports[`Render the components of Calculator renders 2 Button component 1`] = `
<button
  label="2"
  style="width: 100px; height: 50px; padding: 5px; font-size: 24px; background-color: white; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  2
</button>
`;

exports[`Render the components of Calculator renders 3 Button component 1`] = `
<button
  label="3"
  style="width: 100px; height: 50px; padding: 5px; font-size: 24px; background-color: white; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  3
</button>
`;

exports[`Render the components of Calculator renders 4 Button component 1`] = `
<button
  label="4"
  style="width: 100px; height: 50px; padding: 5px; font-size: 24px; background-color: white; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  4
</button>
`;

exports[`Render the components of Calculator renders 5 Button component 1`] = `
<button
  label="5"
  style="width: 100px; height: 50px; padding: 5px; font-size: 24px; background-color: white; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  5
</button>
`;

exports[`Render the components of Calculator renders 6 Button component 1`] = `
<button
  label="6"
  style="width: 100px; height: 50px; padding: 5px; font-size: 24px; background-color: white; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  6
</button>
`;

exports[`Render the components of Calculator renders 7 Button component 1`] = `
<button
  label="7"
  style="width: 100px; height: 50px; padding: 5px; font-size: 24px; background-color: white; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  7
</button>
`;

exports[`Render the components of Calculator renders 8 Button component 1`] = `
<button
  label="8"
  style="width: 100px; height: 50px; padding: 5px; font-size: 24px; background-color: white; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  8
</button>
`;

exports[`Render the components of Calculator renders 9 Button component 1`] = `
<button
  label="9"
  style="width: 100px; height: 50px; padding: 5px; font-size: 24px; background-color: white; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  9
</button>
`;

exports[`Render the components of Calculator renders AC Button component 1`] = `
<button
  label="AC"
  style="width: 100px; height: 50px; padding: 5px; font-size: 24px; background-color: white; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  AC
</button>
`;

exports[`Render the components of Calculator renders DEL Button component 1`] = `
<button
  label="DEL"
  style="width: 100px; height: 50px; padding: 5px; font-size: 24px; background-color: white; cursor: pointer; border: 1px solid gray;"
  type="button"
>
  DEL
</button>
`;

exports[`Render the components of Calculator renders Display component 1`] = `
<input
  id="display"
  readonly=""
  type="text"
  value="0"
/>
`;

exports[`Render the rest of the components Render routes 1`] = `
<h1>
  Math Magicians 🔮
</h1>
`;

exports[`Render the rest of the components Render routes 2`] = `
<h1>
  Welcome to the World of Mathgic! ✨
</h1>
`;

exports[`Render the rest of the components Render routes 3`] = `
<p>
  Let's perform some MATHGIC !!!
</p>
`;

exports[`Render the rest of the components Render routes 4`] = `
<div
  id="quote"
>
  Mathematics is not about numbers, equations, computations
  <br />
  <br />
   
  or algorithms: it is about understanding. - William Paul Thurston
</div>
`;
